--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class="outer-container">
         <div class="container">
             <h1>Entrar</h1>
-            <form action="#">
+            <form action="paginaPrincipal.html">
                 <label for="input-email">Email</label>
                 <input type="email" placeholder="Email" required id="input-email"/>
                 <label for="input-password">Senha</label>
                 <input type="password" placeholder="Senha" required id="input-password"/>
-                <button type="button" value="Entrar" class="btn" id="btn-login">Entrar</button>
+                <button type="submit" value="Entrar" class="btn" id="btn-login">Entrar</button>
             </form>
-            <a href="#">É trabalhador? Cadastre-se</a>
+            <a href="cadastroTrabalhador.html">É trabalhador? Cadastre-se</a>
         </div>
     </div>
 </body>
