--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a class="nav-link active" aria-current="page" href="#">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about-section">Sobre</a>
+          <a class="nav-link" href="#about-section">Sobae</a>
         </li>
         <div class="dropdown">
           <button class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
