--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
           <a class="nav-link active" aria-current="page" href="#">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about-section">Sobae</a>
+          <a class="nav-link" href="#about-section">Sobre</a>
         </li>
+    
         <div class="dropdown">
           <button class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Trabalhadores
+            Buscar Profissional
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <li><a class="dropdown-item" href="#">Arquiteto</a></li>
-            <li><a class="dropdown-item" href="#">Engenheiro</a></li>
-            <li><a class="dropdown-item" href="#">Engenheiro</a></li>
+            <li><a class="dropdown-item" href="pagina-arquiteto.html">Arquiteto</a></li>
+            <li><a class="dropdown-item" href="pagina-engenheiro.html">Engenheiro Civil</a></li>
+            <li><a class="dropdown-item" href="pagina-engenheiro-eletrico.html">Engenheiro Elétrico</a></li>
           </ul>
         </div>
         <li class="nav-item">
