--- a/pagina-arquiteto.html
+++ b/pagina-arquiteto.html
@@ -18,7 +18,7 @@
     <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#about-section">Sobre</a>
@@ -58,15 +58,14 @@
     </nav> 
     <!-- place navbar here -->
   </header>
-  <body>
-    <div class="perfil">
-        <img src="avatar1.jpg" alt="Foto de Perfil">
+      <div class="perfil">
+        <img src="images/arquiteto.png" alt="Foto de Perfil">
         <div class="informacoes">
             <h2>Nome do Usuário</h2>
-            <p>Email: usuario@example.com</p>
-            <p>Profissão: Designer Gráfico</p>
-            <p>Gênero: Masculino</p>
-            <p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at sagittis libero.</p>
+            <p class="p">Email: usuario@example.com</p>
+            <p class="p">Profissão: Designer Gráfico</p>
+            <p class="p">Gênero: Masculino</p>
+            <p class="p">Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at sagittis libero.</p>
             <div class="avaliacoes">
                 <h3>Avaliações</h3>
                 <p>5 estrelas - "Excelente trabalho!"</p>
@@ -74,5 +73,35 @@
             </div>
         </div>
     </div>
+    <div class="perfil">
+      <img src="images/arquiteto.png" alt="Foto de Perfil">
+      <div class="informacoes">
+          <h2>Nome do Usuário</h2>
+          <p class="p">Email: usuario@example.com</p>
+          <p class="p">Profissão: Designer Gráfico</p>
+          <p class="p">Gênero: Masculino</p>
+          <p class="p">Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at sagittis libero.</p>
+          <div class="avaliacoes">
+              <h3>Avaliações</h3>
+              <p>5 estrelas - "Excelente trabalho!"</p>
+              <p>4 estrelas - "Muito profissional."</p>
+          </div>
+      </div>
+  </div>
+  <div class="perfil">
+    <img src="images/arquiteto.png" alt="Foto de Perfil">
+    <div class="informacoes">
+        <h2>Nome do Usuário</h2>
+        <p class="p">Email: usuario@example.com</p>
+        <p class="p">Profissão: Designer Gráfico</p>
+        <p class="p">Gênero: Masculino</p>
+        <p class="p">Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at sagittis libero.</p>
+        <div class="avaliacoes">
+            <h3>Avaliações</h3>
+            <p>5 estrelas - "Excelente trabalho!"</p>
+            <p>4 estrelas - "Muito profissional."</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
