--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <li><a class="dropdown-item" href="pagina-arquiteto.html">Arquiteto</a></li>
             <li><a class="dropdown-item" href="pagina-engenheiro.html">Engenheiro Civil</a></li>
-            <li><a class="dropdown-item" href="pagina-engenheiro-eletrico.html">Engenheiro Elétrico</a></li>
+            <li><a class="dropdown-item" href="pagina-eletricista.html">Eletricista</a></li>
+            <li><a class="dropdown-item" href="pagina-encanador.html">Encanador</a></li>
+            <li><a class="dropdown-item" href="pagina-pedreiro.html">Pedreiro</a></li>
           </ul>
         </div>
         <li class="nav-item">
@@ -67,23 +69,23 @@
             <h2 class="h2-destaque">Serviços</h2>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <a href="#"><img src="./images/arquiteto.png" alt="erro" class="destaques-img"></a>
+                <a href="pagina-arquiteto.html"><img src="./images/arquiteto.png" alt="erro" class="destaques-img"></a>
                 <h3 class="description-img">Arquiteto</h3>
               </div>
               <div class="carousel-item">
-                <a href="#"><img src="./images/encanador.png" alt="erro" class="destaques-img"></a>
+                <a href="pagina-encanador.html"><img src="./images/encanador.png" alt="erro" class="destaques-img"></a>
                 <h3 class="description-img">Encanador</h3>
               </div>
               <div class="carousel-item">
-                <a href="#"><img src="./images/engenheiro.png" alt="erro" class="destaques-img"></a>
+                <a href="pagina-engenheiro.html"><img src="./images/engenheiro.png" alt="erro" class="destaques-img"></a>
                 <h3 class="description-img">Engenheiro</h3> 
               </div>
               <div class="carousel-item">
-                <a href="#"><img src="./images/pedreiro.png" alt="erro" class="destaques-img"></a>
+                <a href="pagina-pedreiro.html"><img src="./images/pedreiro.png" alt="erro" class="destaques-img"></a>
                 <h3 class="description-img">Pedreiro</h3> 
               </div>
               <div class="carousel-item">
-                <a href="#"><img src="./images/eletricista.png" alt="erro" class="destaques-img"></a>
+                <a href="pagina-eletricista.html"><img src="./images/eletricista.png" alt="erro" class="destaques-img"></a>
                 <h3 class="description-img">Eletricista</h3> 
               </div>
             </div>
@@ -105,7 +107,20 @@
           <div class="about-section" id="about-section">
             <h2>Sobre o ConstruFacil</h2>
             <!-- Adicione aqui informações sobre a Construfacil -->
-            <p>.</p>
+            <p>A plataforma web “ConstruFácil” é um serviço inovador que conecta clientes a profissionais qualificados no setor de construção civil. Nosso objetivo é simplificar o processo de encontrar e contratar especialistas para projetos de construção, reforma e manutenção.</p>
+            <ul>
+                <h3>Serviços Oferecidos:</h3>
+              <li>
+                Conexão com Profissionais: Arquitetos, engenheiros, pedreiros, eletricistas, encanadores, pintores e mais.
+              </li>
+              <li>
+                Orçamentos Personalizados: Cotações detalhadas baseadas nas especificações do projeto do cliente.
+              </li>
+              <li>
+                Avaliações e Recomendações: Sistema de feedback    para garantir a qualidade e a confiabilidade dos serviços prestados.</p>
+              </li>
+            </ul>
+            <p>
           </div>
         </div>
         <div class = "col">
@@ -120,28 +135,17 @@
     <div class="row">
       <div class="col">
         <div class="event">
-          <h2>Eventos</h2>
+          <h2>Como funciona?</h2>
           <!-- Adicione aqui informações sobre a Construfacil -->
-          <p>
-            Promoção Relâmpago  
-<ul>
+<ul class="lista-cadastro">
   <li>
-    Promoção 1
+    Cadastro:Clientes e profissionais criam perfis na plataforma, fornecendo informações relevantes.
   </li>
   <li>
-    Promoção 2
+    Seleção de Profissionais: Possibilita que profissionais interessados enviem seu currículo, e o cliente escolhe o mais adequado.
   </li>
   <li>
-    Promoção 3
-  </li>
-  <li>
-    Promoção 4
-  </li>
-  <li>
-    Promoção 5
-  </li>
-  <li>
-    Promoção 6
+    Garantia: A plataforma garante que as partes vão cumprir com o contrato. Resultando em exclusão do cadastro da parte que não cumprir.
   </li>
 </ul>
 
