--- a/loginNormal.html
+++ b/loginNormal.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ConstruFacil</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <style>
     h1 a{
         font-size: 30px;
         color: black;
     }
+    
+
 </style>
 <body>
     <h1><a href="index.html">ConstruFacil</a></h1>
@@ -24,7 +27,8 @@
                 <input type="password" placeholder="Senha" required id="input-password"/>
                 <button type="submit" value="Entrar" class="btn" id="btn-login">Entrar</button>
             </form>
-            <a href="cadastroNormal.html">Cadastre-se</a>
+            <a href="cadastroNormal.html" class="a1">Cadastre-se</a>
+            <a href="index.html" class="a2">Voltar pagina incial</a>
         </div>
     </div>
 </body>
