Update PerfilTrabalhador.html -- Lucas

--- a/PerfilTrabalhador.html
+++ b/PerfilTrabalhador.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>perfilTrabalhador</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylePerfTrab.css">
  </head>
   
 <body> 
