--- a/cadastroTrabalhador.html
+++ b/cadastroTrabalhador.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Trabalhador</title>
-    <script src="cadastroTrabalhador.js"></script>
+    <script src="src/cadastroTrabalhador.js"></script>
     <script src="https://parseapi.back4app.com/js/3/parse.min.js"></script>
     <link rel="stylesheet" href="styleTrab.css">
 </head>
