--- a/cadastroNormal.html
+++ b/cadastroNormal.html
@@ -8,7 +8,7 @@
     <script src="https://parseapi.back4app.com/js/3/parse.min.js"></script>
 </head>
 <body>
-    <h1>ConstruFacil</h1>
+    <h1><a href="index.html">ConstruFacil</a></h1>
     <div class="outer-container">
         <div class="container">
             <h1>Cadastrar</h1>
