--- a/cadastroTrabalhador.html
+++ b/cadastroTrabalhador.html
@@ -11,7 +11,7 @@
 <body>
     <h1><a href="index.html">ConstruFacil</a></h1>
     <div class="outer-container">
-        <div class="container">
+        <div class="container2">
             <h1>Cadastrar</h1>
             <form action="#">
                 <label for="input-email">Email</label>
