--- a/pagina-eletricista.html
+++ b/pagina-eletricista.html
@@ -59,7 +59,7 @@
     <!-- place navbar here -->
   </header>
       <div class="perfil">
-        <img src="images/arquiteto.png" alt="Foto de Perfil">
+        <img src="images/eletricista.png" alt="Foto de Perfil">
         <div class="informacoes">
             <h2>Nome do Usuário</h2>
             <p class="p">Email: usuario@example.com</p>
@@ -74,7 +74,7 @@
         </div>
     </div>
     <div class="perfil">
-      <img src="images/arquiteto.png" alt="Foto de Perfil">
+      <img src="images/eletricista.png" alt="Foto de Perfil">
       <div class="informacoes">
           <h2>Nome do Usuário</h2>
           <p class="p">Email: usuario@example.com</p>
@@ -89,7 +89,7 @@
       </div>
   </div>
   <div class="perfil">
-    <img src="images/arquiteto.png" alt="Foto de Perfil">
+    <img src="images/eletricista.png" alt="Foto de Perfil">
     <div class="informacoes">
         <h2>Nome do Usuário</h2>
         <p class="p">Email: usuario@example.com</p>
