--- a/pagina-encanador.html
+++ b/pagina-encanador.html
@@ -61,7 +61,7 @@
     <!-- place navbar here -->
   </header>
       <div class="perfil">
-        <img src="images/arquiteto.png" alt="Foto de Perfil">
+        <img src="images/encanador.png" alt="Foto de Perfil">
         <div class="informacoes">
             <h2>Nome do Usuário</h2>
             <p class="p">Email: usuario@example.com</p>
@@ -76,7 +76,7 @@
         </div>
     </div>
     <div class="perfil">
-      <img src="images/arquiteto.png" alt="Foto de Perfil">
+      <img src="images/encanador.png" alt="Foto de Perfil">
       <div class="informacoes">
           <h2>Nome do Usuário</h2>
           <p class="p">Email: usuario@example.com</p>
@@ -91,7 +91,7 @@
       </div>
   </div>
   <div class="perfil">
-    <img src="images/arquiteto.png" alt="Foto de Perfil">
+    <img src="images/encanador.png" alt="Foto de Perfil">
     <div class="informacoes">
         <h2>Nome do Usuário</h2>
         <p class="p">Email: usuario@example.com</p>
