--- a/cadastroTrabalhador.html
+++ b/cadastroTrabalhador.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styleTrab.css">
 </head>
 <body>
-    <h1>ConstruFacil</h1>
+    <h1><a href="index.html">ConstruFacil</a></h1>
     <div class="outer-container">
         <div class="container">
             <h1>Cadastrar</h1>
