--- a/loginTrabalhador.html
+++ b/loginTrabalhador.html
@@ -24,7 +24,7 @@
                 <input type="password" placeholder="Senha" required id="input-password"/>
                 <button type="submit" value="Entrar" class="btn" id="btn-login">Entrar</button>
             </form>
-            <a href="cadastroNormal.html" class="a1">Cadastre-se</a>
+            <a href="cadastroTrabalhador.html" class="a1">Cadastre-se</a>
             <a href="index.html" class="a2">Voltar pagina incial</a>
         </div>
     </div>
